Ballot count in EstimateSampleSizes datapoints now refers to the number of ballots cast that contain the contest. Tests updated accordinly (note that IRV tests are now adding CVRs so that the contest ballot count attribute in CountyContestCounter is being updated appropriately, which is a little time consuming).